@@ -15,10 +15,12 @@ MAJOR RELEASE
 		-------------
 		Version 1.3.2
 		-------------
+		*tools.classes.Contour
+			-self.overlaps(): moved threshold variable to parameter, with default 1+2**(-17)
 		*removed wild-card imports, removed unused imports
 		*new renameFRI.py
 		*tools.mergeTool:
-			-added sameName option to checkOverlappingContours() and separateOverlappingContours()
+			-added sameName parameter to checkOverlappingContours() and separateOverlappingContours(), with default True
 		
 		-------------
 		Version 1.3.1
